# bassaleg-assessment-calendar

./: .gitignore  AGENTS.md  CNAME  README.md  Year 10 2025-26 Assessment Calendar.xlsx  data.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vitest.config.ts
.Jules/: bolt.md  palette.md
word-to-mkdocs/: Makefile  README.md  agent_instructions.md  convert_all.py  mkdocs.yml  package-lock.json  pyproject.toml
word-to-mkdocs/docs/: .nav.yml  index.md
word-to-mkdocs/import/: SDS-CS-1_Using_Source_Control.docx  SDS-CS-3_T_SQL_Coding_Standard.docx  SDS-CS-4_RESTful_Design_and_Build_Standards.docx  SDS-CS-5_How_to_Organise_your_Software_Solution.docx  SDS-CS-6_General_Coding_Standards.docx  SDS-CS-7-Azure_DevOps_handbook.docx  SDS-GDN-1_Software_Development_Handbook.docx  SDS-GDN-4_How_to_request_and_manage_software_subscriptions.docx  SDS-GDN-5_Testing_for_lost_updates.docx  SDS-GDN-6_How_to_write_a_Test_Summary_Report.docx  SDS-TEM-2_Coding_Standard_Template.docx
word-to-mkdocs/output/: ADMONITION_CONVERSION_COMPLETE.md  FULL_CONTENT_RESTORATION.md  conversion_log_20251108.txt  conversion_summary_20251108.md  final_completion_summary.md
word-to-mkdocs/raw/: SDS-CS-1_Using_Source_Control.md  SDS-CS-3_T_SQL_Coding_Standard.md  SDS-CS-4_RESTful_Design_and_Build_Standards.md  SDS-CS-5_How_to_Organise_your_Software_Solution.md  SDS-CS-6_General_Coding_Standards.md  SDS-CS-7-Azure_DevOps_handbook.md  SDS-GDN-1_Software_Development_Handbook.md  SDS-GDN-4_How_to_request_and_manage_software_subscriptions.md  (+3 more)
(+417 files in other folders)
